# openai-api-python-master-colt

./: .gitignore  README.md  pyproject.toml
02-getting-started/: 10-first-request.ipynb  15-stop-sequences.ipynb  16-echo-and-n.ipynb  18-models.ipynb
04-prj-color-palette-generator/: simple-color-palette-generator.ipynb  test.ipynb
04-prj-color-palette-generator/ColorPaletteFlaskApp/: app.py  pyproject.toml
04-prj-color-palette-generator/ColorPaletteFlaskApp/static/: app.css  app.js
04-prj-color-palette-generator/ColorPaletteFlaskApp/templates/: index.html
05-important-parameters/: 39-temperature.ipynb  40-top-p.ipynb  41-penalties.ipynb  42-stream.ipynb
06-chat-api-gpt4/: 45-chat-api.ipynb  49-simple-color-palette-generator.ipynb  50-chat-api-parameters.ipynb  chat-api.ipynb
07-chatbot/: chatbot.py  pyproject.toml
08-code-gpt/: 56-working-with-code.ipynb  57-time-complexity.ipynb  58-js-to-python.ipynb  59-fix-bugs.ipynb  60-write-code.ipynb
09-tiktoken/: tiktoken.ipynb
10-code-reviewer/basic-code-reviewer/: pyproject.toml  reviewer.py
10-code-reviewer/basic-code-reviewer/response/: gradient.py  response_gradient.md  response_tree.md  tree.py
10-code-reviewer/basic-code-reviewer/sample-codes/: tree.py
10-code-reviewer/interactive-code-reviewer/: interactive_review.py  prompting.py  pyproject.toml
11-spotify-playlist/: prompt.ipynb
common/: usage.py
